app/src/main/java/com/sample/mvvm_data_binding_koin/error/HttpError.kt
package com.sample.mvvm_data_binding_koin.error

enum class HttpError(val code: Int) {
    UNAUTHORIZED(401)
}
